--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         <div class="card-body">
             <h5 class="card-title">Número en LCD</h5>
             <mat-form-field class="input-container">
-                <input matInput #input placeholder="Ingrese los datos (tamaño, valor)">
+                <input matInput #input placeholder="Ingrese los datos (tamaño, valor)" required>
                 <mat-hint align="start">
                     <strong>Ejemplo: 2,12345</strong>
                 </mat-hint>
